--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -4,10 +4,10 @@
 
 <div class="flex flex-col items-center mt-20 space-y-6">
   <%= link_to new_route_path do %>
-    <%= image_tag "top_button1", alt: "TopButton1", class: "top_button" %>
+    <%= image_tag "top_button1.png", alt: "topButton1", class: "top_button" %>
   <% end %>
   <%= link_to new_user_session_path do %>
-    <%= image_tag "top_button2", alt: "TopButton2", class: "top_button" %>
+    <%= image_tag "top_button2.png", alt: "topButton2", class: "top_button" %>
   <% end %>
 </div>
 
