--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>App</title>
+    <title>Sketto</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", type: "module", "data-turbo-track": "reload" %>
+    
+    <%# importmap.rbに書かれたJSが読み込まれる %>
+    <%= javascript_importmap_tags %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
   </head>
 
   <body>
     <%= render 'shared/component/barba_wrapper' do %>
-      <script async defer 
-        src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&libraries=places,marker,geometry&callback=initMap">
-      </script>
-      
       <%= yield %>
     <% end %>
+    <script async defer 
+      src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAPS_API_KEY'] %>&libraries=places,marker,geometry">
+    </script>
   </body>
 </html>
