--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -1,22 +1,36 @@
-<h1>目的地の選択</h1>
-<input type="text" id="address" placeholder="住所や施設名を入力">
-<button id="searchBtn">検索</button>
+<body>
+  <h1>目的地の選択</h1>
+  <input type="text" id="address" placeholder="住所や施設名を入力">
+  <button id="searchBtn">検索</button>
 
-<button id="drawRoute">ルート検索</button>
+  <button id="drawRoute">ルート検索</button>
 
-<button id="searchNearby">周辺の駐車場を探す</button>
+  <button id="searchNearby">周辺の駐車場を探す</button>
 
-<button id="naviBtn">ナビ開始</button>
-<button id="stopNaviBtn">ナビ終了</button>
+  <button id="naviBtn">ナビ開始</button>
+  <button id="stopNaviBtn">ナビ終了</button>
 
-<div id="map"></div>
+  <div id="map"></div>
+  <script type="module">
+    import "set_marker";
+    import { highlightMarker } from "search_box";
+    import "geocode_address";
+    import "search_parking";
+    import "current_position";
+    import "walk_route";
+    import "navigation";
 
-<%= render 'shared/map' %>
-<%= render 'shared/maps_ready' %>
-<%= render 'shared/set_marker' %>
-<%= render 'shared/search_box' %>
-<%= render 'shared/geocode_address' %>
-<%= render 'shared/search_parking' %>
-<%= render 'shared/current_position' %>
-<%= render 'shared/walk_route' %>
-<%= render 'shared/navigation' %>
+    document.addEventListener("DOMContentLoaded", async() => {
+      // map要素が存在するかチェック
+      const mapDiv = document.getElementById("map");
+      if (!mapDiv) {
+        console.warn("mapDivが存在しません");
+        return;
+      }
+
+      await window.mapAPILoaded;
+      initMap(mapDiv);
+    });
+
+  </script>
+</body>
