importmap変更後barbaによるページ遷移成功

--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -12,6 +12,8 @@
 
   <div id="map"></div>
   <script type="module">
+    import "maps_ready";
+    import { initMap } from "map";
     import "set_marker";
     import { highlightMarker } from "search_box";
     import "geocode_address";
