mv app/javascript/route.js app/javascript/car_route.js実行

--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -18,7 +18,7 @@
     import { highlightMarker } from "search_box";
     import "geocode_address";
     import { searchParking } from "search_parking";
-    import "current_position";
+    import { getCurrentPosition } from "current_position";
     import "walk_route";
     import "navigation";
 
@@ -30,6 +30,7 @@
         initMarkerEvents();
         highlightMarker();
         searchParking();
+        getCurrentPosition();
       }
     });
   </script>
