--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -21,7 +21,8 @@
     import { searchParking } from "search_parking";
     import { getCurrentPosition } from "current_position";
     import { carDrawRoute } from "car_route";
-    import { startNavigation } from "navigation";
+    import { carRouteBtn } from "car_route";
+    import { naviBtn } from "navigation";
 
     document.addEventListener("DOMContentLoaded", () => {
       const mapDiv = document.getElementById("map");
@@ -33,6 +34,8 @@
         highlightMarker();
         searchParking();
         getCurrentPosition();
+        carRouteBtn();
+        naviBtn();
       }
     });
   </script>
