マーカーに吹き出し

--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -10,6 +10,12 @@
   <button id="naviBtn">ナビ開始</button>
   <button id="stopNaviBtn">ナビ終了</button>
 
+  <div class="point-selector">
+    <button id="startPoint">現在地</button>
+    <%= image_tag "arrow.png", alt: "arrow", class: "arrow" %>
+    <button id="destination">目的地</button>
+  </div>
+
   <div id="map"></div>
   <script type="module">
     import "maps_ready";
