--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -8,4 +8,15 @@
   .top_button:hover {
     @apply scale-110;
   }
+
+  .arrow {
+    @apply block h-5 w-auto 
+  }
+
+  .point-selector {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
 }
