infoWindow上のボタンで出発、目的地選択

--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -11,9 +11,9 @@
   <button id="stopNaviBtn">ナビ終了</button>
 
   <div class="point-selector">
-    <button id="startPoint">現在地</button>
+    <button id="startpoint">現在地</button>
     <%= image_tag "arrow.png", alt: "arrow", class: "arrow" %>
-    <button id="destination">目的地</button>
+    <button id="destinationPoint">目的地</button>
   </div>
 
   <div id="map"></div>
