--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -11,7 +11,7 @@
   <button id="stopNaviBtn">ナビ終了</button>
 
   <div class="point-selector">
-    <button id="startpoint">現在地</button>
+    <button id="startPoint">現在地</button>
     <%= image_tag "arrow.png", alt: "arrow", class: "arrow" %>
     <button id="destinationPoint">目的地</button>
   </div>
