不要なinfoWindowは閉じる

--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -13,6 +13,8 @@
   <div class="point-selector">
     <button id="startPoint">現在地</button>
     <%= image_tag "arrow.png", alt: "arrow", class: "arrow" %>
+    <button id="routeParking">駐車場</button>
+    <%= image_tag "arrow.png", alt: "arrow", class: "arrow" %>
     <button id="destinationPoint">目的地</button>
   </div>
 
