--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -14,6 +14,12 @@
     <button id="destinationPoint">目的地</button>
   </div>
 
+  <div class="flex flex-col items-center mt-20 space-y-6">
+    <%= link_to root_path do %>
+      <%= image_tag "load_top.png", alt: "load_top",  class: "load_top" %>
+    <% end %>
+  </div>
+
   <div id="map"></div>
   <script type="module">
     import "maps_ready";
