new.html.erbにhoverを付加

--- a/app/views/routes/new.html.erb
+++ b/app/views/routes/new.html.erb
@@ -1,9 +1,9 @@
 <h1>どうやって移動しますか？</h1>
-<div class="flex flex-col items-center mt-20 space-y-6">
+<div class="how_to_go">
   <%= link_to walk_routes_path do %>
-    <%= image_tag "walk_logo.png", alt: "walk_logo", class: "top_button" %>
+    <%= image_tag "walk_logo.png", alt: "walk_logo" %>
   <% end %>
   <%= link_to car_routes_path do %>
-    <%= image_tag "car_logo.png", alt: "car_logo", class: "top_button" %>
+    <%= image_tag "car_logo.png", alt: "car_logo"%>
   <% end %>
 </div>
