--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -5,7 +5,7 @@
     @apply block h-20 w-auto ml-[40rem] transition-transform duration-300;
   }
   
-  .top_button:hover {
+  .top_button:hover { /* :hover … その要素自身が対象。*/
     @apply scale-110;
   }
 
@@ -18,5 +18,22 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
+  }
+
+  .how_to_go {
+    display: flex;  /* 横並びはrow,縦はcolumn */
+    flex-direction: row;
+    justify-content: center;  /* 横方向中央揃え*/
+    align-items: center;  /* 縦方向中央揃え */
+    gap: 2rem;   /* ボタン間隔のスペース */
+
+    height: 6em;  /* 高さを大きく */
+    width: auto;   /* 幅は自動で比率維持 */
+    transition: transform 0.3s;  /* hoverアニメーショ用 */
+  }
+
+  .how_to_go a:hover img { /* a:hover img … 親（a）にhover → 子（img）を変化。*/
+    transform: scale(1.1);
+    transition: transform 0.3s;
   }
 }
