new.html.erbのフォント変更

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -8,6 +8,7 @@
 @import "./components/slider.css"; 
 @import "./components/map.css";
 @import "./components/logo.css";
+@import "./components/character.css";
 /* @import "./pages/top.css"; */
 
 body {
