--- a/app/views/routes/new.html.erb
+++ b/app/views/routes/new.html.erb
@@ -1,4 +1,5 @@
-<h1>どうやって移動しますか？</h1>
+<link href='https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&display=swap' rel="stylesheet">
+<h1 class="cute-title">どのように移動しますか?</h1>
 <div class="how_to_go">
   <%= link_to walk_routes_path do %>
     <%= image_tag "walk_logo.png", alt: "walk_logo" %>
