walk.html.erbでのエラー解決

--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -33,6 +33,8 @@
     import { walkRouteBtn } from "walk_route";
     import { naviBtn } from "navigation";
 
+    await window.mapApiLoaded;
+
     document.addEventListener("DOMContentLoaded", () => {
       const mapDiv = document.getElementById("map");
 
