駐車場が選択されていない時のルートの描画エラー解決

--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -38,9 +38,13 @@
     await window.mapApiLoaded;
 
     document.addEventListener("DOMContentLoaded", () => {
+      console.log("DOMContentLoaded発火");
+
       const mapDiv = document.getElementById("map");
+      console.log("mapDiv取得:", mapDiv);
 
       if (mapDiv && !mapDiv.dataset.mapInitialized) {
+        console.log("initMap呼び出し直前に到達");
         initMap(mapDiv);
         mapDiv.dataset.mapInitialized = "true";
         initMarkerEvents();
@@ -48,6 +52,8 @@
         highlightMarker();
         getCurrentPosition();
         walkRouteBtn();
+      } else {
+        console.warn("mapDivが存在しないか、既に初期化済みです");
       }
     });
   </script>
