navigation.html.erbにマップの表示

--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -6,7 +6,7 @@
   <button id="walkDrawRoute">ルート検索</button>
 
   <div class="navi_btn">
-    <%= link_to navigation_routes_path do %>
+    <%= link_to walk_navigation_routes_path do %>
       <%= image_tag "startNavi.png", alt: "startNavi" %>
     <% end %>
   </div>
