--- a/app/views/routes/walk_navigation.html.erb
+++ b/app/views/routes/walk_navigation.html.erb
@@ -8,9 +8,8 @@
     import "maps_ready";
     import { initMap } from "map";
     import { getCurrentPosition } from "current_position";
-    import { walkDrawRoute } from "walk_route";
-    import { walkRouteBtn } from "walk_route";
-    import { naviBtn } from "navigation";
+    import { walkDrawRoute, walkRouteBtn } from "walk_route";
+    import { startNavigation } from "navigation";
 
     await window.mapApiLoaded;
 
@@ -21,8 +20,11 @@
         initMap(naviMapDiv);
         naviMapDiv.dataset.mapInitialized = "true";
         getCurrentPosition();
-        walkRouteBtn();
-        naviBtn();
+
+        if (window.routeStart && routeDestination){
+          walkDrawRoute();
+        }
+        startNavigation();
       }
     });
   </script>
