--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -32,7 +32,7 @@
     import { initMap } from "map";
     import { initMarkerEvents } from "set_marker";
     import { highlightMarker } from "search_box";
-    import { initSearchBox } from "search_box";
+    import { initSearchBox, clearSearchMarkersOnRouteDraw } from "search_box";
     import "geocode_address";
     import { searchParking } from "search_parking";
     import { getCurrentPosition } from "current_position";
@@ -54,6 +54,7 @@
         getCurrentPosition();
         carRouteBtn();
         naviBtn();
+        clearSearchMarkersOnRouteDraw() 
       }
     });
   </script>
