walk.html.erbに現在地取得追加

--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -48,4 +48,11 @@
     top: 5rem;
     right: 10rem;
   }
+
+  .current_pos {
+    position: absolute;
+    top: 7rem;
+    right: 5rem;
+    z-index: 1000;
+  }
 }
