--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -39,6 +39,7 @@
     import { carDrawRoute } from "car_route";
     import { carRouteBtn } from "car_route";
     import { naviBtn } from "navigation";
+    import { initCurrentPosBtn } from "current_pos";
 
     await window.mapApiLoaded;
 
