--- a/app/views/routes/car_navigation.html.erb
+++ b/app/views/routes/car_navigation.html.erb
@@ -1,6 +1,6 @@
 <body>
   <%= link_to car_routes_path do %>
-    <%= image_tag "stopNavi.png", alt: "stopNavi", class:"navi_btn" %>
+    <%= image_tag "/images/stopNavi.png", alt: "stopNavi", class:"navi_btn" %>
   <% end %>
   <div id="carNaviMap"></div>
 
