--- a/app/views/routes/new.html.erb
+++ b/app/views/routes/new.html.erb
@@ -2,9 +2,9 @@
 <h1 class="cute-title">どのように移動しますか?</h1>
 <div class="how_to_go">
   <%= link_to walk_routes_path do %>
-    <%= image_tag "walk_logo.png", alt: "walk_logo" %>
+    <%= image_tag "/images/walk_logo.png", alt: "walk_logo" %>
   <% end %>
   <%= link_to car_routes_path do %>
-    <%= image_tag "car_logo.png", alt: "car_logo"%>
+    <%= image_tag "/images/car_logo.png", alt: "car_logo"%>
   <% end %>
 </div>
