--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -6,23 +6,23 @@
   <button id="walkDrawRoute">ルート検索</button>
 
   <%= link_to walk_navigation_routes_path do %>
-    <%= image_tag "startNavi.png", alt: "startNavi", class:"navi_btn" %>
+    <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"navi_btn" %>
   <% end %>
 
   <div class="point-selector">
     <button id="startPoint">現在地</button>
-    <%= image_tag "arrow.png", alt: "arrow", class: "arrow" %>
+    <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
     <button id="destinationPoint">目的地</button>
   </div>
 
   <div class="load_top">
     <%= link_to root_path do %>
-      <%= image_tag "load_top.png", alt: "load_top"%>
+      <%= image_tag "/images/load_top.png", alt: "load_top"%>
     <% end %>
   </div>
 
   <button id="currentPosBtn">
-    <%= image_tag "currentPos.png", alt:"current_pos", class:"current_pos" %>
+    <%= image_tag "/images/currentPos.png", alt:"current_pos", class:"current_pos" %>
   </button>
 
   <script type="module">
