--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,13 +1,13 @@
 <h1 class="flex justify-center mt-30 ml-10">
-  <%= image_tag "logo.png", alt: "Sketto", class: "logo" %>
+  <%= image_tag "/images/logo.png", alt: "Sketto", class: "logo" %>
 </h1>
 
 <div class="flex flex-col items-center mt-20 space-y-6">
   <%= link_to new_route_path do %>
-    <%= image_tag "top_button1.png", alt: "topButton1", class: "top_button" %>
+    <%= image_tag "/images/top_button1.png", alt: "topButton1", class: "top_button" %>
   <% end %>
   <%= link_to new_user_session_path do %>
-    <%= image_tag "top_button2.png", alt: "topButton2", class: "top_button" %>
+    <%= image_tag "/images/top_button2.png", alt: "topButton2", class: "top_button" %>
   <% end %>
 </div>
 
