エラー減少

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -14,9 +14,9 @@
 <div id="splide" class="splide relative -mt-20 -translate-x-10">
   <div class="splide__track">
     <ul class="splide__list">
-      <li class="splide__slide"><img src="/images/intro_page1.png" alt="Slide 01"></li>
-      <li class="splide__slide"><img src="/images/intro_page2.png" alt="Slide 02"></li>
-      <li class="splide__slide"><img src="/images/intro_page3.png" alt="Slide 03"></li>
+      <li class="splide__slide"><%= image_tag "intro_page1.png" %></li>
+      <li class="splide__slide"><%= image_tag "intro_page2.png" %></li>
+      <li class="splide__slide"><%= image_tag "intro_page3.png" %></li>
     </ul>
   </div>
 </div>
