--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload", media: "all", "rel" => "stylesheet" %>
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
+    <%= stylesheet_link_tag "builds/application", "data-turbo-track": "reload" %>
+    <%= javascript_include_tag "builds/application", type: "module", "data-turbo-track": "reload" %>
   </head>
 
   <body>
