--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_include_tag "application", type: "module", "data-turbo-track": "reload" %>
+    <link rel="stylesheet" href="/assets/application.css", data-turbo-track="reload" >
+    <script src="/assets/application.js" type= "module", "data-turbo-track"="reload" ></script>
   </head>
 
   <body>
