404エラー解決

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <link rel="stylesheet" href="/assets/application.css", data-turbo-track="reload" >
-    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+    <link rel="stylesheet" href="/assets/application.css" data-turbo-track="reload" >
+    <script type="module" src="/assets/application.js" data-turbo-track="reload"></script>
   </head>
 
   <body>
