--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide/dist/css/splide.min.css">
-    <link rel="stylesheet" href="/assets/application.css" data-turbo-track="reload">
+    <link rel="stylesheet" href="/assets/builds/application.css" data-turbo-track="reload">
     <script type="module" src="/assets/builds/application.js" data-turbo-track="reload"></script>
   </head>
 
