--- a/app/views/routes/new.html.erb
+++ b/app/views/routes/new.html.erb
@@ -1,5 +1,4 @@
-<link href='https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&display=swap' rel="stylesheet">
-<h1 class="cute-title">どのように移動しますか?</h1>
+<h1 class="cute-title cute-title-layout">どのように移動しますか?</h1>
 <div class="how_to_go">
   <%= link_to walk_routes_path do %>
     <%= image_tag "/images/walk_logo.png", alt: "walk_logo" %>
