--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -9,9 +9,9 @@
 
     <button id="walkDrawRoute">ルート検索</button>
 
-    <button id="currentPosBtn">
-      <%= image_tag "/images/currentPos.png", alt: "current_pos", class:"current_pos" %>
-    </button>
+    <button id="currentPosBtn" class="current_pos">
+      <%= image_tag "/images/currentPos.png", alt: "current_pos" %>
+    </button> 
 
     <%= link_to walk_navigation_routes_path, data: { barba: "link" } do %>
       <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"navi_btn" %>
@@ -24,7 +24,7 @@
     <button id="destinationPoint">目的地</button>
   </div>
 
-  <div class="load_top self-center -mr-8">
+  <div class="load_top">
     <%= link_to root_path do %>
       <%= image_tag "/images/load_top.png", alt: "load_top"%>
     <% end %>
