--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,17 +1,17 @@
-<h1 class="flex justify-center mt-30 ml-10">
+<h1 class="flex justify-center mt-16 md:mt-30 md:ml-10">
   <%= image_tag "/images/logo.png", alt: "Sketto", class: "logo" %>
 </h1>
 
-<div class="flex flex-col items-center mt-20 space-y-6">
+<div class="flex flex-col items-center mt-12 md:mt-20 space-y-6">
   <%= link_to new_route_path do %>
     <%= image_tag "/images/top_button1.png", alt: "topButton1", class: "top_button" %>
   <% end %>
-  <%= link_to new_user_session_path do %>
-    <%= image_tag "/images/top_button2.png", alt: "topButton2", class: "top_button" %>
-  <% end %>
+  <%#= link_to new_user_session_path do %>
+    <%#= image_tag "/images/top_button2.png", alt: "topButton2", class: "top_button" %>
+  <%# end %>
 </div>
 
-  <div id="splide" class="splide relative -mt-20 -translate-x-10">
+  <div id="splide" class="splide relative mt-8 md:-mt-20 md:-translate-x-10">
     <div class="splide__track">
       <ul class="splide__list">
         <li class="splide__slide"><%= image_tag "intro_page1.png" %></li>
