index.html.erbのui調整

--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -1,14 +1,6 @@
 @reference "tailwindcss";
 
 @layer components {
-  .top_button {
-    @apply block h-20 w-auto ml-[40rem] transition-transform duration-300;
-  }
-  
-  .top_button:hover { /* :hover … その要素自身が対象。*/
-    @apply scale-110;
-  }
-
   .arrow {
     @apply block h-5 w-auto 
   }
@@ -40,7 +32,7 @@
   .load_top {
     position: absolute; /* 絶対配置にする */
     top: 1rem; /* 上からの距離 */
-    right: 10rem; /* 右からの距離 */
+    right: 30rem; /* 右からの距離 */
     z-index: 1000; /* 他要素に被らないように優先度を上げる */
   }
 
@@ -50,6 +42,10 @@
   }
 
   .current_pos {
+    position: absolute;
+    top: 7rem;
+    right: 5rem;
+    z-index: 1000;
     width: 4rem; /* ボタンの幅 */
     height: 4rem; /* ボタンの高さ */
   }
