--- a/app/assets/stylesheets/components/slider.css
+++ b/app/assets/stylesheets/components/slider.css
@@ -1,14 +1,11 @@
 .splide {
     max-width: 500px;
     height: auto;
-    position: relative;
-    left: 20rem;
-    top: -20rem;
   }
   
 .splide__slide img{
   width: 100%;
-  height: auto;
+  height: 350px;
   display: block;
   object-fit: contain; 
 }
