walk.html.erbのui調整

--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -32,7 +32,7 @@
   .load_top {
     position: absolute; /* 絶対配置にする */
     top: 1rem; /* 上からの距離 */
-    right: 30rem; /* 右からの距離 */
+    right: 1rem; /* 右からの距離を小さくします */
     z-index: 1000; /* 他要素に被らないように優先度を上げる */
   }
 
