--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -1,38 +1,48 @@
 <body>
-  <div class="flex items-center space-x-4 mt-1 pl-4"> 
-    <%= image_tag "/images/go_to_car.png",alt: "go_to_car", class: "h-20" %> 
-    <%= image_tag "/images/route_logo.png",alt: "route_logo", class: "h-10" %> 
-    <h1 class="cute-title">ルート作成</h1>
+  <div class="p-2 space-y-2"> 
+    <div class="flex items-center justify-between">
+      <div class="flex items-center space-x-2">
+        <%= image_tag "/images/route_logo.png",alt: "route_logo", class: "h-10" %> 
+        <h1 class="cute-title">ルート作成</h1>
+        <%= link_to walk_routes_path do %>
+          <%= image_tag "/images/go_to_car.png",alt: "go_to_car", class: "h-20" %> 
+        <% end %>
+      </div>
+      <div class="load_top">
+        <%= link_to root_path do %>
+          <%= image_tag "/images/load_top.png", alt: "load_top"%>
+        <% end %>
+      </div>
+    </div>
 
-    <input type="text" id="address" placeholder="住所や施設名を入力">
-    <button id="searchBtn">検索</button>
+    <div class="flex items-center space-x-2 justify-center">
+      <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
+      <button id="searchBtn" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold">検索</button>
+    </div>
 
-    <button id="carDrawRoute">ルート検索</button>
+    <div class="flex items-center space-x-2 justify-center  mt-2">            
+      <button id="carDrawRoute" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold">ルート検索</button>
+      <button id="searchNearby" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold">駐車場を探す</button>
+    </div>
+  </div>
 
-    <button id="searchNearby">周辺の駐車場を探す</button>
-
-    <button id="currentPosBtnCar" class ="current_pos">
-    <%= image_tag "/images/currentPos.png", alt:"current_pos_car" %>
+  <div class="absolute top-48 right-0 z-10 flex items-center">     
+    <button id="currentPosBtnCar" class ="current_pos appearance-none bg-transparent border-none p-0m-0 mr-[-1rem]">
+      <%= image_tag "/images/currentPos.png", alt:"current_pos_car" %>
     </button>
-
     <%= link_to car_navigation_routes_path do %>
       <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"navi_btn" %>
     <% end %>
   </div>
 
-  <div class="point-selector">
-    <button id="startPoint">現在地</button>
-    <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
-    <button id="routeParking"style="display:none;">駐車場</button>
-    <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
-    <button id="destinationPoint">目的地</button>
+  <div class="mt-20">
+    <div class="point-selector">
+      <button id="startPoint">現在地</button>
+      <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
+      <button id="routeParking"style="display:none;">駐車場</button>
+      <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
+      <button id="destinationPoint">目的地</button>
+    </div>
+    <div id="map"></div>
   </div>
-
-  <div class="flex flex-col items-center mt-10 space-y-6">
-    <%= link_to root_path do %>
-      <%= image_tag "/images/load_top.png", alt: "load_top",  class: "load_top" %>
-    <% end %>
-  </div>
-
-  <div id="map"></div>
 </body>
