ナビ終了と同時に画像を表示

--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -1,4 +1,9 @@
 <body>
+  <!-- 到着メッセージ -->
+  <div id="arrivalMessage" class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-50 hidden opacity-0 transition-opacity duration-1000 ease-in-out">
+    <%= image_tag "/images/touchaku.png", alt: "arrival" %>
+  </div>
+
   <!-- ヘッダー部分 -->
   <div class="p-2 space-y-2">
     <div class="flex items-center justify-between">
